assets/css/main.css
/* ... */
.rcrow:after, .row:before {
	content: '';
	display: block;
	clear: both;
	height: 0;
}

.stylerc a {
	-moz-transition: color .2s ease-in-out;
	-webkit-transition: color .2s ease-in-out;
	-ms-transition: color .2s ease-in-out;
	transition: color .2s ease-in-out;
	color: #43B3E0;
	text-decoration: none !important;
}

	.stylerc a:hover {
		color: #43bff0 !important;
	}

	.stylerc a img {
		border: 0;
	}

	.stylerc h2, .stylerc h3 { /*used to be all headers*/
		color: #3e3e3e;
		font-weight: 700;
		text-align:center;
	}

	.stylerc p{
			color:#3e3e3e;
			text-align:center;
			font-size: 10pt;
			padding-bottom: 25px;
	}

	.stylerc h2 a, .stylerc h3 a {/*all headers*/
		text-decoration: none;
		color: inherit;
	}

	.stylerc .image {
	 display: inline-block;
	 position: relative;
 }

		.stylerc .image img {
		 display: block;
		 width: 100%;
	 }
	 .stylerc .image.featured {
		 display: block;
		 width: 100%;
		 margin: 0 0 2em 0;
	 }

	 .rcbox {
 		background: #fff;
 		box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.15), 0px 2px 3px 0px rgba(0, 0, 0, 0.1);
 		text-align: center;
		/* padding-bottom: 25px; */
		margin-left:10px;
		margin-right:10px;
 	}

	.wrapper .stylerc{
		background-image: url("images/bg.png");
		box-shadow: inset 0px 1px 0px 0px rgba(0, 0, 0, 0.05), inset 0px 2px 3px 0px rgba(0, 0, 0, 0.1);
	}

	.wrapper.stylerc {
		background-color: #fafafa;
		text-shadow: 1px 1px 0px #fff;
	}

	.wrapper.style3 {
		background-color: #f4f4f4;
		text-shadow: 1px 1px 0px #fff;
	}

/* #animated-logo is in media queries */

#animated-logo-background {
	position: fixed;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
	animation: animatedLogoFade 0.25s ease-in 3.5s;
	animation-fill-mode: both;
}

section#banner.animated-banner, nav#nav.animated-nav {
	animation: animatedLogoFade 1.5s ease-out 3s 1 reverse;
	animation-fill-mode: both;
}

@keyframes animatedLogoFade {
	from {
		opacity: 1;
	}
	to {
		opacity: 0;
	}
}

